<resources>
    <string name="app_name">Github App</string>
    <string name="title_home">Search User</string>
    <string name="title_favorite">Favorite User</string>
    <string name="title_detail">Detail User</string>
    <string name="title_developer">About Developer</string>
    <string name="action_dark_mode">Dark Mode</string>
    <string name="action_light_mode">Light Mode</string>
    <string name="action_developer">About Developer</string>
    <string name="title_search">Search</string>
    <string name="search">Search</string>
    <string name="no_data">Data Not Found</string>
    <string name="resource_error">Opps error, something might be happen</string>
</resources>