<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/onPrimary"
        android:title="search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <group>
        <item
            android:id="@+id/action_dark_mode"
            android:title="@string/action_dark_mode"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_light_mode"
            android:title="@string/action_light_mode"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_about"
            android:title="@string/action_developer"
            app:showAsAction="never" />
    </group>
</menu>